--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,1 +1,1 @@
-spring.cloud.config.server.git.uri=C:\\springboot\\examples\\ConfigServerSetting
+spring.cloud.config.server.git.uri=C:/springboot/examples/ConfigServerSetting
