--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=8980
-spring.cloud.config.server.git.uri=https://github.com/jalaja2020/configserver.git
+spring.cloud.config.server.git.uri=C://springboot/examples/ConfigServerSetting
